--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,7 +8,9 @@
   background-color: #fff;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   z-index: 100;
-  height: 80px; /* Set the height of the navbar */
+  height: 80px;
+  background-color: #f5c16c; 
+  position: fixed;/* Set the height of the navbar */
 }
 
 .navbar-container {
